fix navbar z-index (higher than bc-avatar)

--- a/src/main/webapp/content/css/home.css
+++ b/src/main/webapp/content/css/home.css
@@ -57,6 +57,10 @@ body {
     margin: 0 auto 20px;
 }
 
+.navbar-default {
+    z-index: 1;
+}
+
 .container {
     width: 100%;
     padding: 0;
